<resources>
    <string name="app_name">Login</string>
    <string name="hit_user">User</string>
    <string name="hit_pwd">Password</string>
    <string name="title_main">Enter Your Account Information:</string>
    <string name="title_inter">Hi</string>
    <string name="app_btn_login">Login</string>
    <string name="app_btnperfil">My profile</string>
    <string name="app_btnaddRows">My List</string>
    <string name="add_item">Add</string>
    <string name="item_empty">Item can\'t be empty</string>
    <string name="desc_item">Name</string>
    <string name="app_btnregister">Register</string>
    <string name="msg_fail_login">The user and/or password you entered does not match our records.</string>
    <string name="title_register">User Registration</string>
    <string name="msg_fiel_required">All fields are required.</string>
    <string name="msg_register_ok">Your registration is successful</string>
    <string name="msg_exists_user">The username already registered</string>
    <string name="msg_ok_login">Your welcome</string>
    <string name="msg_last_login">Last Login</string>
    <string name="txtRememberMe">Remember credentials.</string>
    <string name="app_btn_clogin">Logout</string>
    <string name="msg_log_out">Good bye</string>
    <string name="msg_desc">Descrition</string>
    <string name="msg_txt_empty">Enter name</string>
</resources>
