<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.ivajotha.desarrollo.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:src="@drawable/ic_perm_identity_black_48dp"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/margin_Bottom"
        android:foregroundGravity="center"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@id/title"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/margin_Bottom"
        android:layout_below="@id/logo"
        android:text="@string/title_main"
        android:textSize="@dimen/textsize"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/act_main_user"
        android:hint="@string/hit_user"
        android:layout_below="@id/title"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/act_main_pwd"
        android:hint="@string/hit_pwd"
        android:layout_below="@id/act_main_user"
        android:gravity="center_horizontal"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_below="@id/act_main_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/footerBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/act_main_reg"
            android:text="@string/app_btnregister"
            android:visibility="visible"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/act_main_login"
            android:text="@string/app_btn_login"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</RelativeLayout>
